# pygments-pseudocode

./: Readme.md  pyproject.toml
pygments_pseudocode/: __init__.py  lexer.py
