[tool.poetry]
name = "pygments-pseudocode"
version = "0.1.0"
description = "Pygments lexer for pseudocode and algorithms"
authors = ["Cristian Prieto <me@cprieto.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."pygments.lexers"]
"pseudocode" = "pygments_pseudocode:PseudocodeLexer"
